# BE_02_KJH

./: .gitignore  Chapter05_08_강정호.ipynb  Chapter09_13_기초과제_강정호.ipynb  Mini_Project_강정호.ipynb  README.md  chapter14~16_기초과제_강정호_ipynb의_사본.ipynb  chapter17_20_기초과제_강정호.ipynb  chapter6.ipynb  db.sqlite3  form.html  pyproject.toml
02_HTML/: 1_profile.html  2_gwaje.html  3_profile.css  3_profile.html  4_chat.html  4_home.css  4_home.html  4_snowman.css  4_snowman.html  4_일기장.css  4_일기장.html  5_chat.css  5_chat.html  artbox.css  artbox.html  chat.css  membership.css  membership.html  tag-HTML_01.html  text.css
Bootstrap/: test.html
Crawling/: melon_reverse.py
boards/: admin.py  models.py
boot/: checktest.html  index.html  test.html
config/: settings.py
data_analysis/: 02.data_analysis.ipynb  03.data_analysis.ipynb
feeds/: views.py
oz-backend-django/: db.sqlite3  pyproject.toml
oz-backend-django/boards/migrations/: 0001_initial.py
oz-backend-django/common/: models.py
oz-backend-django/config/: authentication.py  settings.py  urls.py
oz-backend-django/feeds/: models.py  serializers.py
oz-backend-django/feeds/migrations/: 0001_initial.py
oz-backend-django/reviews/: serializer.py
oz-backend-django/users/: models.py  serializers.py  urls.py  views.py
oz-backend-django/users/migrations/: 0002_user_is_business.py  0003_user_grade.py
oz-flask-backend/: .gitignore  app_py.txt  auth_py.txt
python_과제/: Chapter01_기초과제_강정호.ipynb  Chapter09_13.ipynb  Chapter_01 (2).eml  Chapter_03.eml  Chapter_04.eml  Chapter_05 ~ 08.eml  Chapter_05.eml  (+18 more)
(+135 files in other folders)
